--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,17 +1,17 @@
 //-------------- OTHER SETTINGS
-//	-console -freq 144 -tickrate 128 +exec autoexec.cfg -high -language english -novid -nojoy
+//	-console -freq 240 -tickrate 128 +exec autoexec.cfg -high -language english -novid -nojoy
 //
-//	BenQ XL2722Z
+//	Benq Zowie XL2546
 //		Nvidia Settings(Soon)
 //		1920x1080
 //		VibranceGUI 80%
-//	Steelseries Rival 700
+//	Zowie EC1-B
 //		Steelseries QcK Heavy
 //		DPI: 400
 //		Polling Rate: 1000hz
 //		MarkC mousefix
-//  Cooler Master Quick Fire Rapid I 
-//  Sennheiser PC 363D
+//  Logitech G910
+//  Astro A50
 
 
 //-------------- NETWORK
@@ -46,27 +46,29 @@ snd_headphone_pan_radial_weight "1"
 snd_rear_headphone_position "90"
 snd_headphone_pan_exponent "2"
 snd_mixahead "0.05"
+voice_enable "1"
 
 
 //-------------- VIDEO
 
-r_dynamic "0"
-r_eyegloss "0"
-sys_antialiasing "0"
-sys_refldetail "0"
-fps_max "288"
-fps_max_menu "145"
+
+//r_dynamic "0"
+//r_eyegloss "0"
+//sys_antialiasing "0"
+//sys_refldetail "0"
+fps_max "350"
+fps_max_menu "240"
 mat_monitorgamma "1.6"
 mat_monitorgamma_tv_enabled "1"
-func_break_max_pieces "0"
-cl_predict "1"
-cl_predictweapons "1"
+//func_break_max_pieces "0"
+//cl_predict "1"
+//cl_predictweapons "1"
 muzzleflash_light "0"
-cl_detail_avoid_force "0"
-cl_detail_avoid_radius "0"
-cl_detail_avoid_recover_speed "0"
-cl_detail_max_sway "0" 
-mat_queue_mode "-1"
+//cl_detail_avoid_force "0"
+//cl_detail_avoid_radius "0"
+//cl_detail_avoid_recover_speed "0"
+//cl_detail_max_sway "0" 
+//mat_queue_mode "-1"
 mat_vsync "0"
 mat_savechanges
 
@@ -200,17 +202,14 @@ bind "mwheeldown" "+jump"
 bind "space" "+jumpcrouch"
 bind "TAB" "+ng" 
 bind "shift" "+speed; r_cleardecals"
-
+bind F11 toggleVoice;
 
 //-------------- ALIASES
 
-alias "voice_switch" "voice_off"
-alias "voice_off" "voice_scale 0; bind p voice_on; echo EXECUTED: Voice chat DISABLED".
-alias "voice_on" "voice_scale 1; bind p voice_off; echo EXECUTED: Voice Chat enabled".
 
 alias "gameinstructor_switch" "gameinstructor_on"
 alias "gameinstructor_off" "gameinstructor_enable 0; o bind gameinstructor_on; echo EXECUTED. Ninja Mode Disabled"
-alias "gameinstructor_on" "gameinstructor_enable 1; bind o gameinstructor_off; echo EXECUTED: Ninja Mode Enabled".
+alias "gameinstructor_on" "gameinstructor_enable 1; bind o gameinstructor_off; echo EXECUTED: Ninja Mode Enabled"
 
 alias "+jumpthrow" "+jump;-attack"  
 alias "-jumpthrow" "-jump"  
@@ -234,6 +233,10 @@ alias "afk_stop" "echo afk script Disabled; -forward; -moveleft; -left;"
 
 alias "+ng" "+showscores; net_graph 1"
 alias "-ng" "-showscores; net_graph 0" 
+
+alias toggleVoice "disableVoice";
+alias disableVoice "alias toggleVoice enableVoice; voice_enable 0; say_team Silent mode ON";
+alias enableVoice "alias toggleVoice disableVoice; voice_enable 1; say_team Silent mode OFF";
 
 
 //-------------- END
